<resources>
    <string name="app_name">RickAndmort</string>
    <string name="locations">Locations</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="species">Species:</string>
    <string name="name">Name:</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="episode_name">Episode name:</string>
    <string name="episode_number">Episode number:</string>
    <string name="date_release">Date release:</string>
    <string name="location_name">Location name:</string>
    <string name="location_type">Location type:</string>
    <string name="dimension">Dimension:</string>
    <string name="episode_created">Episode created:</string>
    <string name="episode_url">Episode URL:</string>
    <string name="characters_from_episode">Characters from episode:</string>
    <string name="origin">Origin:</string>
    <string name="type">Type:</string>
    <string name="location">Location:</string>
    <string name="location_created">Location created:</string>
    <string name="back_button">back button</string>
    <string name="search">Search</string>

</resources>