<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/const_episode_name"
        android:layout_width="@dimen/const_episode_and_location_dp_160"
        android:layout_height="@dimen/dp_28"
        android:text="@string/episode_name"
        android:textSize="@dimen/episode_character_location_sp_14">

    </TextView>

    <TextView
        android:id="@+id/episode_name"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/red"
        android:textSize="@dimen/episode_character_location_sp_14">

    </TextView>

    <TextView
        android:id="@+id/const_episode_number"
        android:layout_width="@dimen/const_episode_and_location_dp_160"
        android:layout_height="@dimen/dp_28"
        android:text="@string/episode_number"
        android:textSize="@dimen/episode_character_location_sp_14">

    </TextView>

    <TextView
        android:id="@+id/episode_number"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_28"
        android:textColor="@color/red"
        android:textSize="@dimen/episode_character_location_sp_14">

    </TextView>


    <TextView
        android:id="@+id/const_episode_date_release"
        android:layout_width="@dimen/const_episode_and_location_dp_160"
        android:layout_height="@dimen/dp_28"
        android:text="@string/date_release"
        android:textSize="@dimen/episode_character_location_sp_14">

    </TextView>


    <TextView
        android:id="@+id/episode_date_release"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_28"
        android:textColor="@color/red"
        android:textSize="@dimen/episode_character_location_sp_14">

    </TextView>

</LinearLayout>



