<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/name_location_const"
        android:layout_width="@dimen/const_episode_and_location_dp_160"
        android:layout_height="@dimen/character_dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/name"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <Button
        android:id="@+id/locations_details_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp">

    </Button>

    <TextView
        android:id="@+id/name_location"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/character_dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="start"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintStart_toEndOf="@id/name_location_const"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/dimension_location_const"
        android:layout_width="@dimen/const_episode_and_location_dp_160"
        android:layout_height="@dimen/character_dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/dimension"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_location_const">

    </TextView>

    <TextView
        android:id="@+id/dimension_location"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/character_dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="start"
        android:textSize="@dimen/episode_character_location_sp_14"

        app:layout_constraintStart_toEndOf="@id/dimension_location_const"
        app:layout_constraintTop_toBottomOf="@id/name_location"
        app:layout_constraintEnd_toStartOf="@id/locations_details_back_button">

    </TextView>

    <TextView
        android:id="@+id/type_location_const"
        android:layout_width="@dimen/const_episode_and_location_dp_160"
        android:layout_height="@dimen/character_dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/type"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dimension_location_const">

    </TextView>

    <TextView
        android:id="@+id/type_location"
        android:layout_width="250dp"
        android:layout_height="@dimen/character_dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="start"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/type_location_const"
        app:layout_constraintTop_toBottomOf="@id/dimension_location">

    </TextView>

    <TextView
        android:id="@+id/create_location_const"
        android:layout_width="@dimen/const_episode_and_location_dp_160"
        android:layout_height="@dimen/character_dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/location_created"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_location_const">

    </TextView>

    <TextView
        android:id="@+id/create_location"
        android:layout_width="250dp"
        android:layout_height="@dimen/character_dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="start"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/create_location_const"
        app:layout_constraintTop_toBottomOf="@id/type_location">

    </TextView>

    <TextView
        android:id="@+id/characters_from_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/characters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_location">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_characters_from_location"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characters_from_location">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>