<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/name_character_const_"
        android:layout_width="@dimen/const_episode_and_location_dp_160"
        android:layout_height="@dimen/character_dp_20"
        android:text="@string/name"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/name_character"
        android:layout_width="0dp"
        android:layout_height="@dimen/character_dp_20"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name_character_const_"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/gender_character_const"
        android:layout_width="@dimen/const_episode_and_location_dp_160"
        android:layout_height="@dimen/character_dp_20"
        android:text="@string/gender"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_character_const_">

    </TextView>

    <TextView
        android:id="@+id/gender_character"
        android:layout_width="0dp"
        android:layout_height="@dimen/character_dp_20"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gender_character_const"
        app:layout_constraintTop_toBottomOf="@id/name_character">

    </TextView>
    <TextView
        android:id="@+id/origin_character_const"
        android:layout_width="@dimen/const_episode_and_location_dp_160"
        android:layout_height="@dimen/character_dp_20"
        android:text="@string/origin"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_character_const">

    </TextView>

    <TextView
        android:id="@+id/origin_character"
        android:layout_width="0dp"
        android:layout_height="@dimen/character_dp_20"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/origin_character_const"
        app:layout_constraintTop_toBottomOf="@id/gender_character_const">

    </TextView>
    <TextView
        android:id="@+id/status_character_const"
        android:layout_width="@dimen/const_episode_and_location_dp_160"
        android:layout_height="@dimen/character_dp_20"
        android:text="@string/status"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/origin_character_const">

    </TextView>

    <TextView
        android:id="@+id/status_character"
        android:layout_width="0dp"
        android:layout_height="@dimen/character_dp_20"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/status_character_const"
        app:layout_constraintTop_toBottomOf="@id/origin_character">

    </TextView>
    <TextView
        android:id="@+id/type_character_const"
        android:layout_width="@dimen/const_episode_and_location_dp_160"
        android:layout_height="@dimen/character_dp_20"
        android:text="@string/type"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_character_const">

    </TextView>

    <TextView
        android:id="@+id/type_character"
        android:layout_width="0dp"
        android:layout_height="@dimen/character_dp_20"
        android:textSize="@dimen/episode_character_location_sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/type_character_const"
        app:layout_constraintTop_toBottomOf="@id/status_character">

    </TextView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/episodes_from_character_recycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>