<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"

    android:layout_margin="4dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/const_character_name"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/name">

        </TextView>

        <TextView
            android:id="@+id/const_character_species"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/species">

        </TextView>

        <TextView
            android:id="@+id/const_character_status"

            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/status">

        </TextView>

        <TextView
            android:id="@+id/const_character_gender"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/gender">

        </TextView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/character_name"
            android:layout_marginTop="@dimen/dp_8"

            android:layout_width="@dimen/dp_160"
            android:layout_height="@dimen/dp_28"
            android:textColor="@color/purple_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/character_species"
            android:layout_marginTop="@dimen/dp_8"

            android:layout_width="@dimen/dp_160"
            android:layout_height="@dimen/dp_28"
            android:textColor="@color/purple_200"
            app:layout_constraintStart_toStartOf="@id/const_character"
            app:layout_constraintTop_toBottomOf="@id/character_name">

        </TextView>

        <TextView
            android:id="@+id/character_status"
            android:layout_marginTop="@dimen/dp_8"

            android:layout_width="@dimen/dp_160"
            android:layout_height="@dimen/dp_28"
            android:textColor="@color/purple_200"
            app:layout_constraintStart_toStartOf="@id/const_character"
            app:layout_constraintTop_toBottomOf="@id/character_species">

        </TextView>

        <TextView
            android:id="@+id/character_gender"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_width="@dimen/dp_160"
            android:layout_height="@dimen/dp_28"
            android:textColor="@color/purple_200"
            app:layout_constraintStart_toStartOf="@id/const_character"
            app:layout_constraintTop_toBottomOf="@id/character_status">

        </TextView>

        <ImageView
            android:id="@+id/character_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:textColor="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="@id/character_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/character_name"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>