<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:background="@color/white"

    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/const_location_name"
            android:layout_width="@dimen/const_episode_and_location_dp_160"
            android:layout_height="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/location_name"
            android:textSize="@dimen/episode_character_location_sp_14">

        </TextView>

        <TextView
            android:id="@+id/const_location_type"
            android:layout_width="@dimen/const_episode_and_location_dp_160"
            android:layout_height="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/location_type"
            android:textSize="@dimen/episode_character_location_sp_14" />

        <TextView
            android:id="@+id/const_location_dimension"
            android:layout_width="@dimen/const_episode_and_location_dp_160"
            android:layout_height="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/dimension"
            android:textSize="@dimen/episode_character_location_sp_14">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/location_name"
            android:layout_width="@dimen/episode_and_location_dp_250"
            android:layout_height="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_8"
            android:textColor="@color/blue"
            android:textSize="@dimen/episode_character_location_sp_14">

        </TextView>

        <TextView
            android:id="@+id/location_type"
            android:layout_width="@dimen/episode_and_location_dp_250"
            android:layout_height="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_8"
            android:textColor="@color/blue"
            android:textSize="@dimen/episode_character_location_sp_14">

        </TextView>

        <TextView
            android:id="@+id/location_dimension"
            android:layout_width="@dimen/episode_and_location_dp_250"
            android:layout_height="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_8"
            android:textColor="@color/blue"
            android:textSize="@dimen/episode_character_location_sp_14">

        </TextView>
    </LinearLayout>


</LinearLayout>
